# dataset-dl

./: .gitignore  README.md  build.spec  main.spec  pyproject.toml
dataset_dl/: extruct.py  main.py
resources/: dataset-dl.icns
src/: core.py  dataset-dl.py  extruct.py  main.py  utilio.py
